# gotcha

./: .coveragerc  .gitignore  LICENSE  Makefile  README.rst  requirements-dev.txt  setup.cfg  setup.py
gotcha/: __init__.py  __init___.py  __main__.py  __version__.py  args.py  ascii.py  gotcha_tty.py  kill.sh
gotcha.egg-info/: PKG-INFO  SOURCES.txt
hider/: Makefile  processhider.c
preload/: Makefile  preload.c
ttyGotcha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
