[metadata]
name = ttyGotcha
description = GOTCHA - The SSH-TTY control Interface
long_description = file: README.rst
long_description_content_type = text/markdown
author = Marcos Caputo
author_email = caputo.marcos@gmail.com
url = https://github.com/caputomarcos/gotcha
keywords =
    hunter
    security
license_file = LICENSE
classifiers =
    Development Status :: 3 - Beta
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Security

[options]
zip_safe = False
packages = find:
install_requires =
    psutil
    twine
    pyinstaller
    staticx
    future
    packaging
    dataclasses
setup_requires =
    setuptools>=30.3.0
    setuptools_scm
test_requires =
    pytest>=2.9.1
    coverage<5.0
    pytest-cov
python_requires = >=3.10.7

[options.entry_points]
console_scripts =
    gotcha = gotcha.__main__:main

[aliases]
test=pytest

# PyTest
[tool:pytest]
minversion                                        = 2.9.1
norecursedirs                                     = .venv .vscode
addopts                                           = --cov=gotcha
testpaths                                         = tests
console_output_style                              = progress
python_classes                                    = Test*
python_files                                      = test_*.py
python_functions                                  = test_*
filterwarnings                                    = ignore::DeprecationWarning

# Coverage
[coverage:report]
# show missing lines numbers
show_missing = True
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive
    # assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
    # Don't complain about log messages not being tested
    logger\.
    logging\.

# Files to exclude from consideration
omit =
    gotcha/__main__.py
